[package]
name = "optifine-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.18.1"
colored = "2.1.0"
indicatif = "0.17.7"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.30"
